dark mode fixed

--- a/src/app/hero-detail/hero-detail.component.scss
+++ b/src/app/hero-detail/hero-detail.component.scss
@@ -1,5 +1,7 @@
 .card {
   margin-top: 20px;
+  width: 30rem ;
+  border-radius: 0.5rem;
 }
 
 .save {
